--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -8,148 +8,62 @@ The schedule for the different curricula are listed here:
 - dc-geosptial
 {% endcomment %}
 
-{% if site.curriculum == "dc-astronomy" %}
-<div class="row">
-  <div class="col-md-6">
-    <h3>Day 1</h3>
-    <table class="table table-striped">
-      <tr>
-	<td>Before starting</td>
-	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
-      </tr>
-      <tr><td>Morning</td> <td> <a href="https://datacarpentry.org/astronomy-python/01-query/">Basic Queries</a></td></tr>
-      <tr><td> </td><td><a href="https://datacarpentry.org/astronomy-python/02-coords/">Coordinate Transformations</a></td></tr>
-      <tr><td>Afternoon</td> <td> <a href="https://datacarpentry.org/astronomy-python/03-transform/">Plotting and Tabular Data</a></td></tr>
-      <tr><td> </td> <td> <a href="https://datacarpentry.org/astronomy-python/04-motion/">Plotting and Pandas</a></td></tr>
-    </table>
-  </div>
-  <div class="col-md-6">
-    <h3>Day 2</h3>
-    <table class="table table-striped">
-      <tr><td>Morning</td><td><a href="https://datacarpentry.org/astronomy-python/05-select/">Transform and Select</a></td></tr>
-      <tr><td> </td> <td> <a href="https://datacarpentry.org/astronomy-python/06-join/">Join</a></td></tr>
-      <tr><td>Afternoon</td><td><a href="https://datacarpentry.org/astronomy-python/07-photo/">Photometry</a></td></tr>
-      <tr><td> </td><td><a href="https://datacarpentry.org/astronomy-python/08-plot/">Visualization</a></td></tr>
-    </table>
-  </div>
-</div>
-
-{% elsif site.curriculum == "dc-ecology" %}
-<div class="row">
-  <div class="col-md-6">
-    <h3>Day 1</h3>
-    <table class="table table-striped">
-      <tr>
-	<td>Before starting</td>
-	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
-      </tr>
-      <tr><td>Morning</td> <td> <a href="https://datacarpentry.org/spreadsheet-ecology-lesson/">Data Organization in Spreadsheets</a></td></tr>
-      <tr><td> </td><td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">OpenRefine for Data Cleaning</a></td></tr>
-      <tr>
-        <td>Afternoon</td>
-        <td>
-          {% if site.flavor == "r" %}
-          <a href="https://datacarpentry.org/R-ecology-lesson/">Introduction to R</a>
-          {% elsif site.flavor == "python" %}
-          <a href="https://datacarpentry.org/python-ecology-lesson/">Introduction to Python</a>
-          {% else %}
-          {% include warning-flavor.html %}
-          {% endif %}
-      </td></tr>
-      <tr> <td>Evening</td> <td>END</td> </tr>
-    </table>
-  </div>
-  <div class="col-md-6">
-    <h3>Day 2</h3>
-    <table class="table table-striped">
-      <tr> <td>Morning</td>
-        <td>
-          {% if site.flavor == "r" %}
-          <a href="https://datacarpentry.org/R-ecology-lesson/">Continuation of R: Data analysis and Visualization</a>
-          {% elsif site.flavor == "python" %}
-          <a href="https://datacarpentry.org/python-ecology-lesson/">Continuation of Python: Data analysis and Visualization</a>
-          {% else %}
-          {% include warning-flavor.html %}
-          {% endif %}
-        </td>
-      </tr>
-      <tr> <td>Afternoon</td><td><a href="https://datacarpentry.org/sql-ecology-lesson/">Data Management with SQL</a></td></tr>
-      <tr>
-	<td>Evening</td>
-	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
-      </tr>
-      <tr>
-	<td> </td>
-	<td> END </td>
-      </tr>
-    </table>
-  </div>
-</div>
-
-{% elsif site.curriculum == "dc-genomics" %}
+{% if site.curriculum == "dc-socsci" %}
 
 <div class="row">
   <div class="col-md-6">
-    <h3>Day 1</h3>
+    <h3>Week 44</h3>
     <table class="table table-striped">
-      <tr>
-	<td>Before starting</td>
-	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
-      </tr>
-      <tr><td>Morning</td> <td> <a href="https://datacarpentry.org/organization-genomics/">Project Organization and Management</a></td></tr>
-      <tr><td> </td><td><a href="https://datacarpentry.org/shell-genomics/">Introduction to the Command Line</a></td></tr>
-      <tr><td>Afternoon</td><td><a href="https://datacarpentry.org/wrangling-genomics/">Data Wrangling and Processing</a></td></tr>
-			<tr> <td>Evening</td> <td>END</td> </tr>
+      <tr> <td>Lecture</td>  <td>Intro to Digital Methods for Historians </td> </tr>
+      <tr> <td>Lecture</td>  <td>Encountering Rmarkdown  </td> </tr>
+      <tr> <td>Seminar</td>  <td>Regular Expressions </td> </tr>
+      <tr> <td>Seminar</td>  <td>Practising Regular Expressions</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
-    <h3>Day 2</h3>
+    <h3>Week 45</h3>
     <table class="table table-striped">
-			<tr><td>Morning</td><td><a href="https://datacarpentry.org/wrangling-genomics/">Continuation: Data Wrangling and Processing</a></td></tr>
-			<tr><td>Afternoon</td><td><a href="https://datacarpentry.org/cloud-genomics/">Introduction to Cloud Computing for Genomics</a></td></tr>
-      <tr>
-	<td>Evening</td>
-	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
-      </tr>
-      <tr>
-	<td> </td>
-	<td> END </td>
-      </tr>
+      <tr> <td>Lecture</td>  <td>Intro to Data </td> </tr>
+      <tr> <td>Lecture</td>  <td><a href="https://datacarpentry.org/spreadsheets-socialsci/">Data Organization in Spreadsheets</a></td> </tr>
+      <tr> <td>Seminar</td>  <td><a href="https://datacarpentry.org/openrefine-socialsci/">OpenRefine for Data Cleaning</a></td> </tr>
+      <tr> <td>Seminar</td>  <td>Creating and streamlining data: Danish Kings and Aarhus Occupations</td> </tr>
     </table>
   </div>
-</div>
+    <h3>Week 46</h3>
+    <table class="table table-striped">
+      <tr> <td>Lecture</td>  <td>Research design </td> </tr>
+      <tr> <td>Lecture</td>  <td>Managing a digital project  </td> </tr>
+      <tr> <td>Seminar</td>  <td><a href="https://datacarpentry.org/r-socialsci/">Introduction to R</a> </td> </tr>
+      <tr> <td>Seminar</td>  <td><a href="https://datacarpentry.org/r-socialsci/">Starting with data</a></td> </tr>
+    </table>
+  </div>
+  <div class="col-md-6">
+    <h3>Week 47</h3>
+    <table class="table table-striped">
+      <tr> <td>Lecture</td>  <td>Text mining with tidytext in R (with Max Odsbjerg) </td> </tr>
+      <tr> <td>Lecture</td>  <td>Troubleshooting R </td> </tr>
+      <tr> <td>Seminar</td>  <td><a href="https://datacarpentry.org/r-socialsci/">Data wrangling in tidyverse</a> </td> </tr>
+      <tr> <td>Seminar</td>  <td><a href="https://datacarpentry.org/r-socialsci/">Visualisation with ggplot</a> </td> </tr>
+    </table>
+  </div> 
+    <h3>Week 48</h3>
+    <table class="table table-striped">
+     <tr> <td>Lecture</td>   <td>Data visualisation and storytelling </td> </tr>
+      <tr> <td>Lecture</td>  <td>Troubleshooting in R</td> </tr>
+      <tr> <td>Seminar</td>  <td>Visualisation in ggplot </td> </tr>
+      <tr> <td>Seminar</td>  <td>gganimate</td> </tr>
+    </table>
+  </div>
+  <div class="col-md-6">
+    <h3>Week 49</h3>
+    <table class="table table-striped">
+      <tr> <td>Lecture</td>  <td>Research Data Management </td> </tr>
+      <tr> <td>Lecture</td>  <td>Class wrap-up </td> </tr>
+      <tr> <td>Seminar</td>  <td>Creating maps in R </td> </tr>
+      <tr> <td>Seminar</td>  <td>Sentiment Analysis in R</td> </tr>
+    </table>
+  </div>
 
-{% elsif site.curriculum == "dc-socsci" %}
-
-<div class="row">
-  <div class="col-md-6">
-    <h3>Day 1</h3>
-    <table class="table table-striped">
-      <tr>
-	<td>Before starting</td>
-	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
-      </tr>
-      <tr><td>Morning</td> <td> <a href="https://datacarpentry.org/spreadsheets-socialsci/">Data Organization in Spreadsheets</a></td></tr>
-      <tr><td> </td><td><a href="https://datacarpentry.org/openrefine-socialsci/">OpenRefine for Data Cleaning</a></td></tr>
-      <tr><td>Afternoon</td><td><a href="https://datacarpentry.org/r-socialsci/">Introduction to R</a></td></tr>
-      <tr> <td>Evening</td> <td>END</td> </tr>
-    </table>
-  </div>
-  <div class="col-md-6">
-    <h3>Day 2</h3>
-    <table class="table table-striped">
-      <tr> <td>Morning</td> <td><a href="https://datacarpentry.org/r-socialsci/">Continuation of R: Data Analysis & Visualization</a></td></tr>
-      <tr> <td>Afternoon</td><td><a href="https://datacarpentry.org/sql-socialsci/">Data Management with SQL</a></td></tr>
-      <tr>
-	<td>Evening</td>
-	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
-      </tr>
-      <tr>
-	<td> </td>
-	<td> END </td>
-      </tr>
-    </table>
-  </div>
 </div>
 
 
