--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -29,6 +29,7 @@ The schedule for the different curricula are listed here:
       <tr> <td>Seminar</td>  <td>Creating and streamlining data: Danish Kings and Aarhus Occupations</td> </tr>
     </table>
   </div>
+  <div class="col-md-6">
     <h3>Week 46</h3>
     <table class="table table-striped">
       <tr> <td>Lecture</td>  <td>Research design </td> </tr>
@@ -46,12 +47,13 @@ The schedule for the different curricula are listed here:
       <tr> <td>Seminar</td>  <td><a href="https://datacarpentry.org/r-socialsci/">Visualisation with ggplot</a> </td> </tr>
     </table>
   </div> 
+  <div class="col-md-6">  
     <h3>Week 48</h3>
     <table class="table table-striped">
      <tr> <td>Lecture</td>   <td>Data visualisation and storytelling </td> </tr>
       <tr> <td>Lecture</td>  <td>Troubleshooting in R</td> </tr>
-      <tr> <td>Seminar</td>  <td>Visualisation in ggplot </td> </tr>
-      <tr> <td>Seminar</td>  <td>gganimate</td> </tr>
+      <tr> <td>Seminar</td>  <td>Visualise Danish kings and European homicides </td> </tr>
+      <tr> <td>Seminar</td>  <td>Visualize global development with gganimate</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
