Schedule W41 wrapup.html

--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -45,23 +45,25 @@ The schedule for the different curricula are listed here:
       <tr> <td>Lecture</td>  <td>Troubleshooting R </td> </tr>
       <tr> <td>Seminar</td>  <td><a href="https://datacarpentry.org/r-socialsci/">Data wrangling in tidyverse</a> </td> </tr>
       <tr> <td>Seminar</td>  <td><a href="https://datacarpentry.org/r-socialsci/">Visualisation with ggplot</a> </td> </tr>
+      <tr> <td>Seminar</td>  <td>Visualise Danish kings, European homicidesm or global development </td> </tr>
     </table>
   </div> 
   <div class="col-md-6">  
     <h3>Week 40</h3>
     <table class="table table-striped">
      <tr> <td>Lecture</td>   <td>Text mining with tidytext in R (with Max Odsbjerg) </td> </tr>
-      <tr> <td>Seminar</td>  <td>Visualise Danish kings and European homicides </td> </tr>
-      <tr> <td>Seminar</td>  <td>Visualize global development with gganimate</td> </tr>
-    </table>
+      <tr> <td>Seminar</td>  <td>Sentiment Analysis in R</td> </tr>
+      <tr> <td>Seminar</td>  <td>Create maps in R </td> </tr>
+      <tr> <td>Seminar</td>  <td>Learn about Webscraping </td> </tr>
+     </table>
   </div>
   <div class="col-md-6">
     <h3>Week 41</h3>
     <table class="table table-striped">
       <tr> <td>Lecture</td>  <td>Research Data Management </td> </tr>
-      <tr> <td>Lecture</td>  <td>Class wrap-up </td> </tr>
-      <tr> <td>Seminar</td>  <td>Creating maps in R </td> </tr>
-      <tr> <td>Seminar</td>  <td>Sentiment Analysis in R</td> </tr>
+      <tr> <td>Seminar</td>  <td>Evaluations </td> </tr>
+      <tr> <td>Seminar</td>  <td>Project presentations </td> </tr>
+      <tr> <td>Seminar</td>  <td>Class wrap-up </td> </tr>
     </table>
   </div>
 
