--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -45,7 +45,7 @@ The schedule for the different curricula are listed here:
       <tr> <td>Lecture</td>  <td>Troubleshooting R </td> </tr>
       <tr> <td>Seminar</td>  <td><a href="https://datacarpentry.org/r-socialsci/">Data wrangling in tidyverse</a> </td> </tr>
       <tr> <td>Seminar</td>  <td><a href="https://datacarpentry.org/r-socialsci/">Visualisation with ggplot</a> </td> </tr>
-      <tr> <td>Seminar</td>  <td>Visualise Danish kings, European homicidesm or global development </td> </tr>
+      <tr> <td>Seminar</td>  <td>Visualise Danish kings, European homicides or global development </td> </tr>
     </table>
   </div> 
   <div class="col-md-6">  
@@ -66,7 +66,6 @@ The schedule for the different curricula are listed here:
       <tr> <td>Seminar</td>  <td>Class wrap-up </td> </tr>
     </table>
   </div>
-
 </div>
 
 
